[Polyam] Fix logo pushing header buttons out of view on certain conditions in mobile layout
Port 4f068d4fcc4d134fcbd56faa8f39c608dd343417 to polyam-glitch

--- a/app/javascript/flavours/polyam/styles/components/columns.scss
+++ b/app/javascript/flavours/polyam/styles/components/columns.scss
@@ -59,6 +59,7 @@
 }
 
 $ui-header-height: 55px;
+$ui-header-logo-wordmark-width: 99px;
 
 .ui__header {
   display: none;
@@ -74,6 +75,10 @@ $ui-header-height: 55px;
   &__logo {
     display: inline-flex;
     padding: 15px;
+    flex-grow: 1;
+    flex-shrink: 1;
+    overflow: hidden;
+    container: header-logo / inline-size;
 
     .logo {
       height: $ui-header-height - 30px;
@@ -84,7 +89,7 @@ $ui-header-height: 55px;
       display: none;
     }
 
-    @media screen and (width >= 320px) {
+    @container header-logo (min-width: #{$ui-header-logo-wordmark-width}) {
       .logo--wordmark {
         display: block;
       }
@@ -101,6 +106,7 @@ $ui-header-height: 55px;
     gap: 10px;
     padding: 0 10px;
     overflow: hidden;
+    flex-shrink: 0;
 
     .button {
       flex: 0 0 auto;
